# docs/web/api/openapi.yaml
@@ -382,13 +382,7 @@ components:
         desc:
           description: Description
           type: string
-        created_at:
-          description: User created at
-          example: 2021-01-01T00:00:00Z
-          format: date-time
-          type: string
       required:
-      - created_at
       - desc
       - display_name
       - first_name
